"""items

Revision ID: 59ba55306ac7
Revises: aa33f74af31a
Create Date: 2024-09-23 16:00:14.046988

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '59ba55306ac7'
down_revision = 'aa33f74af31a'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('item',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(), nullable=False),
    sa.Column('app_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['app_id'], ['application.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('name')
    )
    op.create_table('user_applications',
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('application_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['application_id'], ['application.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], )
    )
    op.create_table('user_item',
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('item_id', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['item_id'], ['item.id'], ),
    sa.ForeignKeyConstraint(['user_id'], ['user.id'], )
    )
    with op.batch_alter_table('invitation', schema=None) as batch_op:
        batch_op.add_column(sa.Column('role', sa.String(), nullable=False))

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('invitation', schema=None) as batch_op:
        batch_op.drop_column('role')

    op.drop_table('user_item')
    op.drop_table('user_applications')
    op.drop_table('item')
    # ### end Alembic commands ###
