@startuml
hide circle

entity "Application" as app {
  * mnemonic: string
  --
  *credentials : text
  *redirect : text
  funcPerson : text
}

entity "Item" as item {
    indent: string
}

entity "Invitation" as invite {
    *i: uuidd
    Item?: string
    role?: string
}

entity "Uses Item" as ui {
    role?: string
}

entity "Uses App" as ua {
    role?: string
}

entity "Users" as user {
   * ident: text
    --
    user info: json
    extra info*: string
    keys: json
}

entity "Key" as key {
    *key: secret
    --
    ttl: ...
}

app ||--o{ invite
user ||--o{ key
key |o--|| app
app ||--o| user
app ||--o{ item
item }o--o{ user
invite }o---o| item
user ||--o{ ui
item ||--o{ ui
user ||--o{ ua
app ||--o{ ua

@enduml